--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -3,10 +3,6 @@
   margin-right: 30px;
 }
 
-.content {
-  margin-top: 40px;
-}
-
 .span3{
 width: 230px;
 }
