--- a/app/assets/stylesheets/login.css.scss
+++ b/app/assets/stylesheets/login.css.scss
@@ -1,6 +1,7 @@
 @import "bootstrap";
 
 .landing-html {
+  margin-top:-40px;
   background: url(/assets/black_linen_v2.png); 
 }
 .landing-wrapper {
